Thu Jun 13 18:48:14 2002  Owen Taylor  <otaylor@redhat.com>

 	* gdk/x11/gdkcolor-x11.c: Make work
	gdk_colormap_sync() work for DirectColor visuals 
	as well. Fill in the ->colors array in
	gdk_screen_get_system_colormap () for DirectColor visuals.
	(#81954, Based on a patch from shivaram.upadhyayula@wipro.com)
 
Thu Jun 13 17:50:36 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c gtk/gtkentry.c: Add the obsolete
	CUA cut/copy/paste bindings. (#79078)

	* gtk/gtktextview.c gtk/gtkentry.c: Make <Shift>BackSpace
	a synonym for for Backspace. (#80302, Jeff Waugh)

Thu Jun 13 15:02:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdnd-x11.c: Ignore all client events that
	were sent to a window that we don't know about or
	to a foreign window. (#81543, Young-Ho, Cha)

Thu Jun 13 12:24:09 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c (gtk_file_selection_set_filename):
	Fix so that the encoding of the filename is handled
	properly in the case of non-UTF-8 filesystems;
	document the encoding. (#83386, Sebastian Ritau)

	* gtk/gtkfilesel.c (filenames_drag_get): Remove
	debug printf. Fix UTF-8 / filename encoding 
	confusion.

2002-06-13  Christian Rose  <menthos@menthos.com>

	* Makefile.am (EXTRA_DIST): Remove po/README.tools, po/desk.pl
	and po/update.pl.

Thu Jun 13 12:01:36 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_drag_motion): Don't return
	a positive status unless there is a text target in
	the drag. (#83386, Thomas Leonard.)

Thu Jun 13 11:36:37 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkdnd.c (_gtk_drag_source_handle_event): Save
 	the initial grab time, use that when changing the
 	pointer. (#83052, help from Dave Camp tracking it down.)
 
Thu Jun 13 16:42:40 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreestore.c (gtk_tree_store_finalize): traverse all nodes,
	not just the leafs (pointed out by Josh Parsons)

2002-06-12  Havoc Pennington  <hp@redhat.com>
 